# NNOF

./: CMakeLists.txt  README.md
examples/: demo_app.cpp
include/: activation_functions.h  benchmark.h  convolutional_layer.h  fully_connected_layer.h  gpu_operations.h  loss_functions.h  network.h  opencl_optimizations.h  ops.h  optimization_pass.h  optimization_pass_registrar.h  scheduler.h  tensor.h
python/annof/: autotuner.py  core.cpp  model_io.py
src/: activation_functions.cpp  benchmark.cpp  convolutional_layer.cpp  fully_connected_layer.cpp  gpu_operations.cpp  loss_functions.cpp  network.cpp  opencl_optimizations.cpp  ops_cpu.cpp  ops_opencl.cpp  optimization_pass.cpp  scheduler.cpp  tensor.cpp
tests/: benchmark_nn.cpp  benchmark_ops.cpp  test_ops.cpp
